--- a/api-try/whoIamI.html
+++ b/api-try/whoIamI.html
@@ -9,14 +9,20 @@
 </head>
 
 <body>
-    <h3 id="name">Name</h3>
+    <h3 id="user-name">Name</h3>
 
     <script>
-        fetch('https://randomuser.me/api/')
-            .then(res => res.json)
+        fetch('https://randomuser.me/api')
+            .then(res => res.json())
             .then(data => {
-                console.log(data);
+                const user = data.results[0]
+                const name = user.name
+                const userName = `${name.title} ${name.first} ${name.last}`
+                console.log(userName);
+                document.getElementById('user-name').innerText = userName
             })
+
+
     </script>
 </body>
 
